--- a/Calcolatrice/style.css
+++ b/Calcolatrice/style.css
@@ -2,6 +2,7 @@
         text-align: center; 
         align-items: center;
         margin: 0 auto;
+        justify-content: center;
 }
 
 .tasto{    
